030-software/fluxcd/apps/maddy/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: maddy
  labels:
    app: maddy
