030-software/fluxcd/apps/maddy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: maddy
  labels:
    app: maddy
spec:
  type: ClusterIP
  ports:
  - port: 9749
    targetPort: metrics
    protocol: TCP
    name: metrics
  selector:
    app: maddy
---
apiVersion: v1
kind: Service
metadata:
  name: caddy
  labels:
    app: caddy
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: caddy
---
apiVersion: v1
kind: Service
metadata:
  name: imap
  labels:
    app: maddy
spec:
  type: ClusterIP
  ports:
  - port: 143
    targetPort: imap
    protocol: TCP
    name: imap
  - port: 993
    targetPort: imap-ssl
    protocol: TCP
    name: imap-ssl
  selector:
    app: maddy
---
apiVersion: v1
kind: Service
metadata:
  name: smtp
  labels:
    app: maddy
spec:
  type: ClusterIP
  ports:
  - port: 25
    targetPort: smtp
    protocol: TCP
    name: smtp
  - port: 587
    targetPort: submission-ssl
    protocol: TCP
    name: submission-ssl
  - port: 465
    targetPort: submission
    protocol: TCP
    name: submission
  selector:
    app: maddy
---
apiVersion: v1
kind: Service
metadata:
  name: dmarc-reports
  labels:
    app: maddy
spec:
  type: ClusterIP
  ports:
  - port: 993
    targetPort: imap-ssl
    protocol: TCP
    name: imap-ssl
  - port: 587
    targetPort: submission-ssl
    protocol: TCP
    name: submission-ssl
  selector:
    app: maddy
