030-software/fluxcd/apps/maddy/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mta-sts
spec:
  hostnames:
  - mta-sts.${publicDomain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: caddy
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /.well-known/mta-sts.txt
