030-software/fluxcd/apps/maddy/routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: imap
  annotations:
    external-dns.kubernetes.io/hostname: maddy.${domain}
spec:
  parentRefs:
    - name: cilium
      namespace: cilium
      sectionName: imap
  rules:
    - backendRefs:
        - name: imap
          port: 143
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: imap-ssl
spec:
  parentRefs:
    - name: cilium
      namespace: cilium
      sectionName: imap-ssl
  rules:
    - backendRefs:
        - name: imap
          port: 993
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: smtp
spec:
  parentRefs:
    - name: cilium
      namespace: cilium
      sectionName: smtp
  rules:
    - backendRefs:
        - name: smtp
          port: 25
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: submission-ssl
spec:
  parentRefs:
    - name: cilium
      namespace: cilium
      sectionName: submission-ssl
  rules:
    - backendRefs:
        - name: smtp
          port: 587
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: submission
spec:
  parentRefs:
    - name: cilium
      namespace: cilium
      sectionName: submission
  rules:
    - backendRefs:
        - name: smtp
          port: 465
